--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -96,7 +96,7 @@
                                     <a href="/cart-Products/<%= product._id %>" class="btn-product btn-cart"><span>add to cart</span></a>
     
                                     <div class="details-action-wrapper">
-                                        <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add to Wishlist</span></a>
+                                        <a href="/add-wishlist/<%= product._id %>" class="btn-product btn-wishlist" title="Wishlist"><span>Add to Wishlist</span></a>
                                     </div><!-- End .details-action-wrapper -->
                                 </div><!-- End .product-details-action -->
                             <% } %>
