--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -54,7 +54,7 @@
                             <li>
                                 <a href="" >Product</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#" class="sf-with-ul">Pages</a>
 
                                 <ul>
@@ -66,9 +66,9 @@
                                         <a href="" >Contact</a>
                                     </li>
                                    
-                                    <!-- <li><a href="404.html">Error 404</a></li> -->
+                                    <li><a href="404.html">Error 404</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                             <!-- <li>
                                 <a href="">Profile</a>
                             </li> -->
