--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -55,7 +55,7 @@
                             <li>
                                 <a href="" >Product</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="#" class="sf-with-ul">Pages</a>
 
                                 <ul>
@@ -71,9 +71,9 @@
                                         <a href="contact.html" >Contact</a>
                                     </li>
                                    
-                                    <!-- <li><a href="404.html">Error 404</a></li> -->
+                                    <li><a href="404.html">Error 404</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                             <!-- <li>
                                 <a href="">Profile</a>
                             </li> -->
