--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -42,6 +42,7 @@
       <link rel="stylesheet" href="assets/css/demos/demo-11.css">
 
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body>
