--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -105,7 +105,7 @@
                         
 
                         <div class="profile ml-3 dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <% if (userName) { %>
                                     <%= userName %> 
                                 <% } else { %>
