--- a/views/admin/layout/sidenav.ejs
+++ b/views/admin/layout/sidenav.ejs
@@ -98,15 +98,15 @@
           <span class="menu-title">Orders</span>
         </a>
       </li>
-      <!-- <li class="nav-item menu-items">
-        <a class="nav-link" href="pages/icons/mdi.html">
+       <li class="nav-item menu-items">
+        <a class="nav-link" href="/admin/offers">
           <span class="menu-icon">
             <i class="mdi mdi-laptop"></i>
           </span>
-          <span class="menu-title">Icons</span>
+          <span class="menu-title">Offers</span>
         </a>
       </li>
-      <li class="nav-item menu-items">
+      <!-- <li class="nav-item menu-items">
         <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
           <span class="menu-icon">
             <i class="mdi mdi-security"></i>
@@ -132,7 +132,7 @@
           <span class="menu-title">Documentation</span>
         </a>
       </li>
-    </ul> --> 
+    </ul> -->
   </nav>
 
 
