--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -51,7 +51,7 @@
             </div>
 
             <div class="container mt-3">
-                <a href="/admin/products/add" class="btn btn-primary">Add New Product</a>
+                <a href="/admin/products/add" class="btn btn-outline-danger">Add New Product</a>
             </div>
 
             <!-- Pagination -->
